# simple-breakout-clone

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Ball.h  Block.h  Entity.h  Game.h  Paddle.h
src/: Ball.cpp  Block.cpp  Game.cpp  Game.h  Paddle.cpp  Paddle.h  main.cpp
